test_suite/tests/macros/display_case/unknown_variant_attribute.rs
use macros::DisplayCase;

#[derive(DisplayCase)]
#[display_case(case = "lowercase")]
enum Test {
    Foo,
    #[display_case(bar = "bar")]
    Bar,
}

fn main() {}
